# django-alive

./: .gitignore  .python-version  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  tests.yml  tox.yml
django_alive/: checks.py  middleware.py  settings.py  utils.py  views.py
django_alive/tests/: settings.py  side_effects.py  test_checks.py  test_command.py  test_middleware.py  test_views.py
