[metadata]
name = django-alive
version = 1.2.2.dev0
description = Healtchecks for Django
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Peter Baumgartner
author_email = pete@lincolnloop.com
url = https://github.com/lincolnloop/django-alive/
keywords = django, healtcheck, alive
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django

[options]
packages = find:
install_requires =
    django

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django

[bdist_wheel]
universal = 1

[zest.releaser]
tag-signing = yes

[coverage:run]
source = django_alive
omit =
    django_alive/tests/*

[coverage:report]
show_missing = true
skip_covered = true

[tool:pytest]
DJANGO_SETTINGS_MODULE = django_alive.tests.settings
addopts = --pyargs
testpaths = django_alive
filterwarnings = all
